server.log
node.exe : npm warn exec The following package was not found and will be 
installed: ts-node@10.9.2
At C:\Program Files\nodejs\npx.ps1:28 char:3
+   & $NODE_EXE $NPX_CLI_JS $args
+   ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
    + CategoryInfo          : NotSpecified: (npm warn exec T... ts-node@10.9.2 
   :String) [], RemoteException
    + FullyQualifiedErrorId : NativeCommandError
 
C:\Users\jatin\AppData\Local\npm-cache\_npx\1bf7c3c15bf47d04\node_modules\ts-no
de\src\index.ts:859
    return new TSError(diagnosticText, diagnosticCodes, diagnostics);
           ^
TSError: Γ¿» Unable to compile TypeScript:
src/index.ts(1,8): error TS2882: Cannot find module or type declarations for 
side-effect import of 'dotenv/config'.
src/index.ts(2,21): error TS2307: Cannot find module 'express' or its 
corresponding type declarations.
src/index.ts(3,18): error TS2307: Cannot find module 'cors' or its 
corresponding type declarations.
src/index.ts(5,24): error TS2307: Cannot find module 'socket.io' or its 
corresponding type declarations.
src/index.ts(38,15): error TS7006: Parameter '_req' implicitly has an 'any' 
type.
src/index.ts(38,21): error TS7006: Parameter 'res' implicitly has an 'any' 
type.

    at createTSError (C:\Users\jatin\AppData\Local\npm-cache\_npx\1bf7c3c15bf47
d04\node_modules\ts-node\src\index.ts:859:12)
    at reportTSError (C:\Users\jatin\AppData\Local\npm-cache\_npx\1bf7c3c15bf47
d04\node_modules\ts-node\src\index.ts:863:19)
    at getOutput (C:\Users\jatin\AppData\Local\npm-cache\_npx\1bf7c3c15bf47d04\
node_modules\ts-node\src\index.ts:1077:36)
    at Object.compile (C:\Users\jatin\AppData\Local\npm-cache\_npx\1bf7c3c15bf4
7d04\node_modules\ts-node\src\index.ts:1433:41)
    at Module.m._compile (C:\Users\jatin\AppData\Local\npm-cache\_npx\1bf7c3c15
bf47d04\node_modules\ts-node\src\index.ts:1617:30)
    at node:internal/modules/cjs/loader:1839:10
    at Object.require.extensions.<computed> [as .ts] (C:\Users\jatin\AppData\Lo
cal\npm-cache\_npx\1bf7c3c15bf47d04\node_modules\ts-node\src\index.ts:1621:12)
    at Module.load (node:internal/modules/cjs/loader:1441:32)
    at Function._load (node:internal/modules/cjs/loader:1263:12)
    at TracingChannel.traceSync (node:diagnostics_channel:322:14) {
  diagnosticCodes: [ 2882, 2307, 2307, 2307, 7006, 7006 ]
}
